change to version 2.6.3

--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -3,7 +3,7 @@ MAINTAINER Vladimir Kunin <vladimir@knowitop.ru>
 
 ARG DEBIAN_FRONTEND=noninteractive
 ARG ITOP_VERSION=2.7.0-beta
-ARG ITOP_FILENAME=iTop-2.7.0-beta-4941.zip
+ARG ITOP_FILENAME=iTop-2.6.3-5092.zip
 
 RUN apt-get install -y software-properties-common \
     && add-apt-repository -y ppa:ondrej/php \
