--- a/base/Dockerfile
+++ b/base/Dockerfile
@@ -17,7 +17,11 @@ RUN apt-get install -y software-properties-common \
         git \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/* \
-    && update-alternatives --set php /usr/bin/php7.3
+    && update-alternatives --set php /usr/bin/php7.3 \
+    && apt-key adv --recv-keys --keyserver hkp://keyserver.ubuntu.com:80 0xF1656F24C74CD1D8 \
+    && add-apt-repository 'deb [arch=amd64,arm64,i386,ppc64el] http://mirror.host.ag/mariadb/repo/10.3/ubuntu xenial main' \
+    && apt-get update \
+    && apt-get install -y mariadb-client
 
 # Get iTop
 RUN rm -rf /var/www/html/* \
